--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -200,11 +200,9 @@ li a {
   <p style="float:left"><b>find . -type f -size +5M -exec ls -sh {} \;</b></p>
   <p style="float:left">Förklaring: -size +5M flaggan sorterar finds resultat på filer som är större än 5Mb. Varje fil ska sedan visas med info om hur stor filen är, ls -s, och en människa ska kunna förstå det, ls -h, så storlekten skrivs ut i Mb, Gb, kb etc.</p>
   <p style="float:left">Uppgift 3: Använd Emacs och skapa ett macro som går igenom alla rader i filen resultat och tar bort allting förutom namnen. Information om hur du skapar macron i Emacs kan du hitta i dokumentationen eller föreläsningssliden från föreläsningnen som handlade om Emacs. </p>
-  <p style="float:left">Svar: Öppna först filen <a href="./resultat.txt">resultat.txt</a> i emacs och se till att pekaren är i början av dokumentet genom att trycka <i>ALT</i> <i><</i> samtidigt. För att börja registerera macro i emacs tryck <i>Ctrl</i> <i>x</i> och sedan <i>Shift</i> <i>8</i>. Macrot som ska registreras är att först gå fram två ord (namnen) så tryck ned <i>Alt</i> <i>f</i> två gånger, ta bort resten av raden genom att trycka <i>Ctrl</i> <i>k</i> och sedan gå tillbaka två ord till början av raden genom att trycka <i>Alt</i> <i>b</i> två gånger och slutligen ned en rad genom att trycka <i>Ctrl</i> <i>n</i>. Macrot är nu färdigt så tryck först <i>Ctrl x</i> sedan <i>Shift</i> <i>9</i>.</p>
-<p style="float:left">Markera först hela texten genom att trycka <i>Ctrl</i> <i>x</i> sedan <i>Ctrl p</i>. När hela texten är markerad aktivera senaste makrot med <i>Ctrl x, Ctrl k, r</i> där kommatecknet särskiljer knapptryckningarna.</p>
-
-  <p style="float:left">Alternativ lösning ifall makrot skulle göra allt jobb utan att flytta pekaren i emacs: Öppna först <a href="./resultat.txt">resultat.txt</a> i emacs och rör inte pekaren. Tryck sedan följande kombination tangenter efter varandra. Kombinationerna särskiljs med kommatecken.</p>
-  <p style="float:left">Ctrl x, Shift 8, Alt f, Alt f, Ctrl k, Alt b, Alt b, Ctrl n, Ctrl u, 20, Ctrl x, Shift 9</p> 
+   <p style="float: left">Svar: Öppna först <a href="./resultat.txt">resultat.txt</a> i emacs och rör inte pekaren. Tryck sedan följande kombination tangenter efter varandra. Kombinationerna särskiljs med kommatecken.</p>
+  <p style="float: left">Ctrl x, Shift 8, Alt x, replace-regexp, ENTER, [0-9], ENTER, ENTER, Ctrl x, Shift 9</p>
+  <p style="float: left">Macrot är nu definerat och har aktiverats en gång. Därför har alla siffror försvunnit. För att se macrot in action tryck ned Ctrl, Shift och - samtidigt för att få tillbaka alla siffror. Tryck sedan Ctrl x och sedan e för att aktivera det senaste inspelade macrot.
 
 <h2 style="float: left; color: green">Klart!</h2>
 </div>
